--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@farcaster/frame-sdk": "^0.0.26",
-    "@farcaster/frame-wagmi-connector": "^0.0.14",
-    "@privy-io/react-auth": "^1.99.1",
-    "@privy-io/wagmi": "^0.2.13",
+    "@farcaster/frame-sdk": "^0.0.27",
+    "@farcaster/frame-wagmi-connector": "^0.0.15",
+    "@privy-io/react-auth": "^2.4.3",
+    "@privy-io/wagmi": "^1.0.3",
     "@tanstack/react-query": "^5.62.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.2",
+    "lucide-react": "^0.475.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "2.x",
     "wagmi": "^2.14.6"
   },
